<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.LauncherFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/ivLogo"
        android:gravity="center"
        android:layout_marginBottom="50dp"
        android:textSize="30sp"
        android:textColor="#313131"/>

   <ImageView
       android:id="@+id/ivLogo"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:src="@mipmap/ic_launcher_round"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btnLoginGuest"
        android:text="@string/proceed_to_login"
        android:background="@drawable/btn_selector_red"
        android:textColor="@color/grey1"
        android:layout_margin="16dp"/>

    <Button
        android:id="@+id/btnLoginGuest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/btn_selector_red"
        android:textColor="@color/grey1"
        android:text="@string/guest_login"
        android:layout_margin="16dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>